refactored file structure

--- a/analysis/r_nba-Baseline_Multinomial_Model.ipynb
+++ b/analysis/r_nba-Baseline_Multinomial_Model.ipynb
@@ -30,7 +30,7 @@
     "    pattern = r'^.*\\.csv$'\n",
     "    return [f for f in os.listdir(path) if bool(re.match(pattern,f))]\n",
     "    \n",
-    "path = 'data/backlog/'\n",
+    "path = '../data/backlog/'\n",
     "csv_files = return_csv_files(path)\n",
     "df = pd.DataFrame()\n",
     "for csv in csv_files:\n",
@@ -213,9 +213,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 0.634833333333\n",
-      "Validation Accuracy: 0.625\n",
-      "Test Accuracy: 0.676441186271\n"
+      "Training Accuracy: 0.641083333333\n",
+      "Validation Accuracy: 0.624666666667\n",
+      "Test Accuracy: 0.658780406531\n"
      ]
     }
    ],
@@ -235,10 +235,10 @@
     {
      "data": {
       "text/plain": [
-       "0    7320\n",
-       "3    2014\n",
-       "1    1846\n",
-       "2     820\n",
+       "0    7356\n",
+       "3    2035\n",
+       "1    1830\n",
+       "2     779\n",
        "Name: predicted, dtype: int64"
       ]
      },
