--- a/analysis/r_nba-Bayes_Multinomial_Model.ipynb
+++ b/analysis/r_nba-Bayes_Multinomial_Model.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1069,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Analysis of /r/nba Posts\n",
@@ -18,15 +26,17 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import re\n",
+    "import sys\n",
+    "sys.path.append('../lib/')\n",
     "import Bayes_Helper as bayes\n",
     "import Multinomial_Helper as multih"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1070,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -34,7 +44,7 @@
     "    pattern = r'^.*\\.csv$'\n",
     "    return [f for f in os.listdir(path) if bool(re.match(pattern,f))]\n",
     "    \n",
-    "path = 'data/backlog/'\n",
+    "path = '../data/backlog/'\n",
     "csv_files = return_csv_files(path)\n",
     "df = pd.DataFrame()\n",
     "for csv in csv_files:\n",
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1071,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1072,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1073,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1074,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1075,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1076,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -161,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1078,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#bayes_weights = [.9,.8,1.2,.6]\n",
-    "#bayes_weights = [1,1,1,1]\n",
+    "bayes_weights = [1,1,1,1]\n",
     "def pxy_table(X_data, Y_data, words, num_i):\n",
     "    '''\n",
     "    p(word|y=i) = # of times y = i where word appears / # of time y = i\n",
@@ -214,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1077,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -222,10 +232,10 @@
     {
      "data": {
       "text/plain": [
-       "0.041583333333333333"
+       "0.043333333333333335"
       ]
      },
-     "execution_count": 1077,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1079,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -256,13 +266,13 @@
     "\n",
     "\n",
     "X_hour = training_df.created.apply(lambda d: d.hour).rename('hour')\n",
-    "phour = ((pd.concat([hour,Y_training], axis=1).groupby(['hour','score']).size()\n",
-    "          / pd.concat([hour,Y_training], axis=1).groupby(['hour']).size())).values"
+    "phour = ((pd.concat([X_hour,Y_training], axis=1).groupby(['hour','score']).size()\n",
+    "          / pd.concat([X_hour,Y_training], axis=1).groupby(['hour']).size())).values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -285,19 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def divide_by_domain(X_data,Y_data):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1080,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1081,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -325,9 +323,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training accuracy: 0.57875\n",
-      "validation accuracy: 0.526333333333\n",
-      "test accuracy: 0.551149616794\n"
+      "training accuracy: 0.57625\n",
+      "validation accuracy: 0.522333333333\n",
+      "test accuracy: 0.527824058647\n"
      ]
     }
    ],
@@ -341,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1082,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -358,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1083,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -366,14 +364,14 @@
     {
      "data": {
       "text/plain": [
-       "0    7252\n",
-       "3    2455\n",
-       "2    1200\n",
-       "1    1093\n",
+       "0    7063\n",
+       "3    3437\n",
+       "1     967\n",
+       "2     533\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 1083,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1084,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -392,14 +390,14 @@
     {
      "data": {
       "text/plain": [
-       "0    0.255654\n",
-       "3    0.633809\n",
-       "2    0.755833\n",
-       "1    0.675206\n",
+       "0    0.246071\n",
+       "1    0.676319\n",
+       "2    0.684803\n",
+       "3    0.677335\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 1084,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1085,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -418,14 +416,14 @@
     {
      "data": {
       "text/plain": [
-       "0    0.257803\n",
-       "1    0.796678\n",
-       "2    0.756037\n",
-       "3    0.494944\n",
+       "0    0.276495\n",
+       "1    0.816099\n",
+       "2    0.857988\n",
+       "3    0.368091\n",
        "Name: score, dtype: float64"
       ]
      },
-     "execution_count": 1085,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
